--- a/BasicLang/BasicLang.csproj
+++ b/BasicLang/BasicLang.csproj
@@ -12,4 +12,10 @@
     <Compile Remove="GeneratedCode\**\*.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <!-- LSP Server dependencies -->
+    <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
